--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "dev": "webpack serve --content-base public"
   },
   "dependencies": {
-    "@proton/web-sdk": "^2.7.23"
+    "@proton/web-sdk": "^2.7.23",
+    "@dfinity/agent": "0.10.0",
+    "@dfinity/auth-client": "0.10.0",
+    "@dfinity/authentication": "0.10.0",
+    "@dfinity/principal": "0.10.0",
+    "@dfinity/candid": "0.10.0",
+    "@dfinity/identity": "0.10.0"
   }
 }
