--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "svelte": "^3.31.2",
     "svelte-loader": "^3.0.0",
     "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.4.0"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack serve --content-base public"
+    "dev": "webpack serve --content-base public",
+    "start": "webpack serve --mode development --env development"
   },
   "dependencies": {
-    "@proton/web-sdk": "^2.7.23",
     "@dfinity/agent": "0.10.0",
     "@dfinity/auth-client": "0.10.0",
     "@dfinity/authentication": "0.10.0",
-    "@dfinity/principal": "0.10.0",
     "@dfinity/candid": "0.10.0",
-    "@dfinity/identity": "0.10.0"
+    "@dfinity/identity": "0.10.0",
+    "@dfinity/principal": "0.10.0",
+    "@proton/web-sdk": "^2.7.23",
+    "webpack-dev-server": "^4.5.0"
   }
 }
