--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@dfinity/identity": "0.10.0",
     "@dfinity/principal": "0.10.0",
     "@proton/web-sdk": "^2.7.23",
+    "eosjs": "^21.0.3",
     "webpack-dev-server": "^4.5.0"
   }
 }
