--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@dfinity/candid": "0.10.0",
     "@dfinity/identity": "0.10.0",
     "@dfinity/principal": "0.10.0",
+    "@greymass/eosio": "^0.5.3",
     "@proton/web-sdk": "^2.7.23",
     "eosjs": "^21.0.3",
     "import": "0.0.6",
